@@ -10,7 +10,9 @@ binmode STDOUT, ':encoding(UTF-8)';
 binmode STDERR, ':encoding(UTF-8)';
 
 ok(defined($π), 'we have a defined $π');
+ok(defined(π), 'we have a defined π sub');
 
 ok((3.14 < $π) && ($π < 3.15), '$π is between 3.14 and 3.15');
+ok((3.14 < π) && (π < 3.15), 'π is between 3.14 and 3.15');
 
 done_testing;
