@@ -1,6 +1,7 @@
 Revision history for Acme-Pi
 
 {{$NEXT}}
+          - added new export, a constant sub named π
 
 3.141592  2016-03-14 18:04:51Z
           - truncate $VERSION to 16 chars, to work with PAUSE's new sanity
